--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
-          <p class="socials-title">Social media</p>
+        <div class="column-2">
+          <p class="column-title">Social media</p>
           <ul class="socials-list">
             <li class="socials-item">
               <a href="" class="socials-link">
@@ -459,7 +459,54 @@
             </li>
           </ul>
         </div>
+        <div class="column-3">
+          <p class="column-title">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="subscribe-label">
+              <input
+                class="subscribe-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="close-btn" type="button" aria-label="Modal close">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <label>
+            Name
+            <input class="modal-input input-name" type="text" name="name" />
+          </label>
+          <label>
+            Phone
+            <input class="modal-input" type="tel" name="phone" />
+          </label>
+          <label>
+            Email
+            <input class="modal-input" type="email" name="email" />
+          </label>
+          <label>
+            Comment
+            <textarea name="comment" cols="30" rows="10"></textarea>
+          </label>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
