--- a/index.html
+++ b/index.html
@@ -489,22 +489,46 @@
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <label>
-            Name
-            <input class="modal-input input-name" type="text" name="name" />
-          </label>
-          <label>
-            Phone
-            <input class="modal-input" type="tel" name="phone" />
-          </label>
-          <label>
-            Email
-            <input class="modal-input" type="email" name="email" />
-          </label>
-          <label>
-            Comment
-            <textarea name="comment" cols="30" rows="10"></textarea>
-          </label>
+          <div class="field-wrapper">
+            <label class="modal-label" for="name"> Name </label>
+            <div class="input-wrapper">
+              <input class="modal-input" id="name" type="text" name="name" />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="field-wrapper">
+            <label class="modal-label" for="phone"> Phone </label>
+            <div class="input-wrapper">
+              <input class="modal-input" id="phone" type="tel" name="phone" />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="field-wrapper">
+            <label class="modal-label" for="email"> Email </label>
+            <div class="input-wrapper">
+              <input class="modal-input" id="email" type="email" name="email" />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div>
+            <label class="modal-label" for="comment"> Comment </label>
+            <textarea
+              class="modal-comment"
+              id="comment"
+              name="comment"
+              cols="30"
+              rows="10"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <input type="checkbox" name="agreement" id="agreement" />
+          <button class="button-order" type="submit">Send</button>
         </form>
       </div>
     </div>
