--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-btn" type="button" aria-label="Modal close">
           <svg class="close-icon" width="8" height="8">
@@ -527,7 +527,21 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <input type="checkbox" name="agreement" id="agreement" />
+          <label class="form-agreement">
+            <input
+              class="checkbox visually-hidden"
+              type="checkbox"
+              name="user-egreement"
+              value="false"
+            />
+            <span class="agreement-checkbox">
+              <svg class="agreement-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-vector"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the
+            <a class="agreement-link" href="">Privacy Policy</a>
+          </label>
           <button class="button-order" type="submit">Send</button>
         </form>
       </div>
