--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="column-1">
+        <div class="column-one">
           <a href="./index.html" class="logo"
             >Web<span class="accent">Studio</span></a
           >
@@ -426,7 +426,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="column-2">
+        <div class="column-two">
           <p class="column-title">Social media</p>
           <ul class="socials-list">
             <li class="socials-item">
@@ -459,7 +459,7 @@
             </li>
           </ul>
         </div>
-        <div class="column-3">
+        <div class="column-three">
           <p class="column-title">Subscribe</p>
           <form class="subscribe-form">
             <label class="subscribe-label">
@@ -490,9 +490,14 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="field-wrapper">
-            <label class="modal-label" for="name"> Name </label>
+            <label class="modal-label" for="user-name"> Name </label>
             <div class="input-wrapper">
-              <input class="modal-input" id="name" type="text" name="name" />
+              <input
+                class="modal-input"
+                id="user-name"
+                type="text"
+                name="user-name"
+              />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
@@ -516,32 +521,35 @@
               </svg>
             </div>
           </div>
-          <div>
-            <label class="modal-label" for="comment"> Comment </label>
+          <div class="comment-wrapper">
+            <label class="modal-label" for="user-comment"> Comment </label>
             <textarea
               class="modal-comment"
-              id="comment"
-              name="comment"
+              id="user-comment"
+              name="user-comment"
               cols="30"
               rows="10"
               placeholder="Text input"
             ></textarea>
           </div>
-          <label class="form-agreement">
+          <div class="checkbox-wrapper">
             <input
               class="checkbox visually-hidden"
               type="checkbox"
-              name="user-egreement"
+              name="user-privacy"
               value="false"
+              id="user-privacy"
             />
-            <span class="agreement-checkbox">
-              <svg class="agreement-icon" width="10" height="8">
-                <use href="./images/icons.svg#icon-vector"></use>
-              </svg>
-            </span>
-            I accept the terms and conditions of the
-            <a class="agreement-link" href="">Privacy Policy</a>
-          </label>
+            <label class="form-agreement" for="user-privacy">
+              <span class="agreement-checkbox">
+                <svg class="agreement-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="agreement-link" href="">Privacy Policy</a>
+            </label>
+          </div>
           <button class="button-order" type="submit">Send</button>
         </form>
       </div>
