--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
               class="checkbox visually-hidden"
               type="checkbox"
               name="user-privacy"
-              value="false"
+              value="true"
               id="user-privacy"
             />
             <label class="form-agreement" for="user-privacy">
